# GOM

./: .gitignore  README.adoc  README.md  Taskfile.yml  ToR-proposed.adoc  ToR.adoc  index.html  procedure.html
.github/workflows/: build.yml  upload-on-merge.yml
GOM_Technologies/: GOM_Technologies.xml  README.MD
experimental/: README.md  iso19135-roles.md  iso19135-roles.ttl  iso19135-roles.xml
experimental/codelist-vocabularies/: README.md
experimental/scripts/: extract_cses.py  pyproject.toml  requirements.txt  status.ttl  update-vocabs.py  upload-vocabs.py  upload_vocabs.py  vocprez-additions-validator.ttl  vocpub-validator.ttl  vocpub.ttl
experimental/vocab-profile/: README.adoc  readme.adoc  readme2.adoc  specification.adoc  statuses.adoc
experimental/vocab-server/: install.txt
isotc211_GOM_harmonizedOntology/Orphans/: catalog-v001.xml  orphNew.owl  orphOrphans.owl  orphOrphans.rdf  orphTemplatesUsed.rdf
isotc211_GOM_harmonizedOntology/orphans/: New.rdf  Orphans.rdf  (+2 more)
meetings/: meeting-2022-01-21.md  meeting-2022-03-29.md  plenary-2022-05-11.adoc  plenary-2022-05-11.md  plenary-2022-12-07  plenary-2022-12-07.adoc  plenary-2023-05-17.adoc  plenary-2023-12-06.adoc  plenary-2024-06-26.adoc  plenary-2024-11-13.adoc  plenary-2025-05-21.adoc  plenary-2025-11-19.adoc
ontologies/: 19157-1.ttl
semantic-objects/: README.adoc  requirements.txt
standards-assessment/: index.html  procedure-domain-model.adoc  procedure.adoc  procedure.html  readme.adoc
vocab-profile/: compounded-validator.shacl.ttl  index.html  specification.html  statuses.html
(+1275 files in other folders)
